[gd_scene load_steps=7 format=2]

[ext_resource path="res://eggs.gd" type="Script" id=1]
[ext_resource path="res://img/Предметы(фин)/яйца_2.png" type="Texture" id=2]
[ext_resource path="res://img/Предметы(фин)/яйца_2_пс.png" type="Texture" id=3]
[ext_resource path="res://sound/Яйцо взяли из корзины.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 115.623, 93.1036 )

[node name="eggs" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.857422, 12.0033 )
shape = SubResource( 2 )

[node name="eggSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="input_event" from="." to="." method="_on_eggs_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_eggs_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_eggs_mouse_exited"]
